--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -2,30 +2,25 @@
 <html>
   <head>
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <script>
-    function auth_fn(button_id){
-      var id = button_id;
-      if(id =="auth"){
+    $('#mailAuth').click( function() {
         var email = $("#email").val();
         $.ajax({
-          url: '/mail',
+          url: '/sendMail',
           dataType: 'json',
-          type: 'POST',
-          data:'email',
+          type: 'GET',
+          data: email,
           success: function(data){
             alert("인증 메일을 전송했습니다.");
           },
-          error: function(error){
-            alert("인증 메일 전송을 실패했습니다" + error);
+          error: function(err){
+            alert("인증 메일 전송을 실패했습니다" + err);
           
           }
         });
-  
-      };
-
-    }
-     
+      });
         
      </script>
 
@@ -67,7 +62,7 @@
             <% if(errors.email){ %>
               <span class="invalid-feedback"><%= errors.email.message %></span>
             <% } %>
-              <button type="button" name="sendMail" id="auth" onclick="auth_fn(this.id)" class="btn btn-primary">인증메일 보내기</button>
+              <button type="button" name="mailAuth" id="mailAuth" class="btn btn-primary">인증메일 보내기</button>
           </div>
         </div>
         <div class="form-group row">
