--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -25,6 +25,26 @@
       });    
          </script>
 
+      <script type="text/javascript">
+      $(document).ready(function() {  
+        $('#authCode').click(function() {
+            var code = $("#code").val();
+            $.ajax({
+              url: '/users/new/authCode',
+              dataType: 'json',
+              type: 'POST',
+              data: {data:code},
+              success: function(){
+                alert("인증 번호가 일치합니다.");
+              },
+              error: function(err){
+              
+              }
+            });
+          });
+      });    
+         </script>       
+
     <%- include('../partials/head') %>
   </head>
   <body>
@@ -68,15 +88,15 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="authCode" class="col-sm-3 col-form-label">인증번호</label>
+          <label for="authCode" class="col-sm-3 col-form-label">인증번호*</label>
           <div class="col-sm-9">
-          <input type="text" id="authCode" name="authCode" value="<%= user.authCode %>" class="form-control">
-          <button type="button" name="emailButton" class="btn btn-primary">check</button>
+          <input type="text" id="code" name="authCode" value="<%= user.authCode %>" class="form-control">
+          <button type="button" name="emailButton" id="authCode" class="btn btn-primary">check</button>
           </div>
         </div>
 
         <div class="form-group row">
-          <label for="password" class="col-sm-3 col-form-label">Password*</label>
+          <label for="password" class="col-sm-3 col-form-label">비밀번호*</label>
           <div class="col-sm-9">
             <input type="password" id="password" name="password" value="" class="form-control <%= (errors.password)?'is-invalid':'' %>">
             <% if(errors.password){ %>
@@ -85,7 +105,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="passwordConfirmation" class="col-sm-3 col-form-label">Password Confirmation*</label>
+          <label for="passwordConfirmation" class="col-sm-3 col-form-label">비밀번호 확인*</label>
           <div class="col-sm-9 col-sm-offset-3">
             <input type="password" id="passwordConfirmation" name="passwordConfirmation" value="" class="form-control <%= (errors.passwordConfirmation)?'is-invalid':'' %>">
             <% if(errors.passwordConfirmation){ %>
