--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -35,10 +35,10 @@
               type: 'POST',
               data: {data:code},
               success: function(){
-                alert("인증 번호가 일치합니다.");
+                alert("인증 코드가 일치합니다.");
               },
               error: function(err){
-              
+                alert("인증 코드를 다시 입력해 주세요.");
               }
             });
           });
@@ -55,7 +55,7 @@
 
     <div class="container mb-3">
 
-      <h3 class="contentBoxTop mb-3">New User</h3>
+      <h3 class="contentBoxTop mb-3">회원가입</h3>
 
       <form action="/users" method="post">
 
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">Name*</label>
+          <label for="name" class="col-sm-3 col-form-label">이름*</label>
           <div class="col-sm-9">
             <input type="text" id="name" name="name" value="<%= user.name %>" class="form-control <%= (errors.name)?'is-invalid':'' %>">
             <% if(errors.name){ %>
@@ -88,10 +88,13 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="authCode" class="col-sm-3 col-form-label">인증번호*</label>
+          <label for="authCode" class="col-sm-3 col-form-label">인증코드*</label>
           <div class="col-sm-9">
-          <input type="text" id="code" name="authCode" value="<%= user.authCode %>" class="form-control">
+          <input type="text" id="code" name="authCode" value="<%= user.authCode %>" class="form-control <%= (errors.authConfirmation)?'is-invalid':'' %>">
           <button type="button" name="emailButton" id="authCode" class="btn btn-primary">check</button>
+          <% if(errors.authConfirmation){ %>
+          <span class="invalid-feedback"><%= errors.authCode.message %></span>
+          <% } %>
           </div>
         </div>
 
@@ -114,7 +117,7 @@
           </div>
         </div>
         <p>
-          <small>*Required</small>
+          <small>*필수입력</small>
         </p>
 
         <% if(errors.unhandled){ %>
