--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -13,7 +13,7 @@
               dataType: 'json',
               type: 'POST',
               data: {data:email},
-              success: function(){
+              success: function(data){
                 alert("인증 메일을 전송했습니다.");
               },
               error: function(err){
@@ -38,7 +38,7 @@
                 alert("인증 코드가 일치합니다.");
               },
               error: function(err){
-                alert("인증 코드를 다시 입력해 주세요.");
+                alert(err+"인증 코드를 다시 입력해 주세요.");
               }
             });
           });
@@ -82,13 +82,14 @@
           <div class="col-sm-9">
             <div class="input-group">
             <input type="text" id="email" name="email" value="<%= user.email %>" class="form-control <%= (errors.email)?'is-invalid':'' %>">
-            <% if(errors.email){ %>
-              <span class="invalid-feedback"><%= errors.email.message %></span>
-            <% } %>
             <span class="input-group-btn">
               <button type="button" name="mailAuth" id="mailAuth" class="btn btn-primary">인증메일 보내기</button>
               </span>
+              <% if(errors.email){ %>
+                <span class="invalid-feedback"><%= errors.email.message %></span>
+              <% } %>
             </div>
+            
           </div>
         </div>
         <div class="form-group row">
