--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
     <%- include('../partials/head') %>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+    <!-- CDN 한글화 -->
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.18/lang/summernote-ko-KR.min.js"></script>
   </head>
-  <body>
-    <%- include('../partials/nav') %>
 
+<body>
+  <%- include('../partials/nav') %>
     <div class="container mb-3">
 
       <nav aria-label="breadcrumb"> <!--부트스트랩-->
@@ -15,43 +21,58 @@
           <li class="breadcrumb-item active" aria-current="page">New Post</li>
         </ol>
       </nav>
-
-      <form action="/posts<%= getPostQueryString() %>" enctype="multipart/form-data" method="post">
-
-        <div class="form-group">
-          <label for="title">Title</label>
-          <input type="text" id="title" name="title" value="<%= post.title %>" class="form-control <%= (errors.title)?'is-invalid':'' %>">
-          <% if(errors.title){ %>
-            <span class="invalid-feedback"><%= errors.title.message %></span>
-          <% } %>
-        </div>
-
-        <div class="form-group">
-          <label for="attachment">Attachment</label>
-          <input type="file" name="attachment" class="form-control-file" id="attachment">
-        </div>
-
-        <div class="form-group">
-          <label for="body">Body</label>
-          <textarea id="body" name="body" rows="5" class="form-control <%= (errors.body)?'is-invalid':'' %>"><%= post.body %></textarea>
-          <% if(errors.body){ %>
-            <span class="invalid-feedback"><%= errors.body.message %></span>
-          <% } %>
-        </div>
-
-        <% if(errors.unhandled){ %>
-          <div class="invalid-feedback d-block">
-            <%= errors.unhandled %>
-          </div>
-        <% } %>
-
-        <div>
-          <a class="btn btn-primary" href="/posts<%= getPostQueryString() %>">Back</a>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-
-      </form>
-
+  <form action="/posts<%= getPostQueryString() %>" enctype="multipart/form-data" method="post">
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title" value="<%= post.title %>" class="form-control <%= (errors.title)?'is-invalid':'' %>">
+      <% if(errors.title){ %>
+        <span class="invalid-feedback"><%= errors.title.message %></span>
+      <% } %>
     </div>
-  </body>
+
+    <textarea id="summernote" name="body" class="form-control <%= (errors.body)?'is-invalid':'' %>"><%= post.body %></textarea>
+    <% if(errors.body){ %>
+      <span class="invalid-feedback"><%= errors.body.message %></span>
+    <% } %>
+
+    <div class="form-group">
+      <label for="attachment">Attachment</label>
+      <input type="file" name="attachment" class="form-control-file" id="attachment">
+    </div>
+
+    <% if(errors.unhandled){ %>
+      <div class="invalid-feedback d-block">
+        <%= errors.unhandled %>
+      </div>
+    <% } %>
+
+    <div>
+      <a class="btn btn-primary" href="/posts<%= getPostQueryString() %>">Back</a>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+    </form>
+  <script>
+    $(document).ready(function() {
+      $('#summernote').val("${post.body}");
+        $('#summernote').summernote({
+          placeholder: '최대 500자 작성 가능합니다.',
+   toolbar: [
+       // [groupName, [list of button]]
+       ['fontname', ['fontname']],
+       ['fontsize', ['fontsize']],
+       ['style', ['bold', 'italic', 'underline','strikethrough', 'clear']],
+       ['color', ['forecolor','color']],
+       ['table', ['table']],
+       ['para', ['ul', 'ol', 'paragraph']],
+       ['height', ['height']],
+       ['insert',['picture','link','video']],
+       ['view', ['fullscreen', 'help']]
+     ],
+   fontNames: ['Arial', 'Arial Black', 'Comic Sans MS', 'Courier New','맑은 고딕','궁서','굴림체','굴림','돋움체','바탕체'],
+   fontSizes: ['8','9','10','11','12','14','16','18','20','22','24','28','30','36','50','72']
+ });
+    });
+  </script>
+  </div>
+</body>
 </html>
